--- a/Job/my_resume.html
+++ b/Job/my_resume.html
@@ -1,28 +1,64 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<style>
-    .header{
-        font-family:fantasy;
-        color:brown;
-          }
-    p{
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    }
-    
-</style>
-<head >
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Alex Zhou's website</title>
-</head>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Zijian Zhou's Website</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <script type="text/javascript" src="https://lib.webfont.com/fastjs.min.js"></script>
+    <script type="text/javascript">
+    $webfont.load("body", "8cce6e7766ef4d1db3d650cc09baf610", "PingFangEL");
+    /*$webfont.load("#id1,.class1,h1", "8cce6e7766ef4d1db3d650cc09baf610", "PingFangEL");*/
+    $webfont.draw();
+    </script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+  </head>
 <body>
-    <h1 class = "header">
-        AlexZhou's Website
-    </h1>
-    <p>
-        Zijian's resume
-        <a href="https://www.linkedin.com/in/zijian-zhou/">Visit My LinkedIn</a>
-    </p>
+    <header>
+        <nav id="header-nav" class="navbar navbar-default">
+            <div class="container">
+                <div class="navbar-header">
+                    <a href="my_resume.html" class="">
+                    </a>
+
+                    <div class="navbar-brand">
+                      <a href="my_resume.html">
+                        <h1>Zijian Zhou</h1>
+                      </a>
+
+                    </div>
+                
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                  </button>
+                </div>
+                <div id="collapsable-nav" class="collapse navbar-collapse">
+                    <ul id="nav-list" class="nav navbar-nav navbar-right">
+                     <li>
+                       <a href="https://github.com/zhouuualexander/Zijian-Zhou-personal-website">
+                         <span class="fa fa-github"></span><br class="hidden-xs">  Projects</a>
+                     </li>
+                     <li>
+                       <a href="https://www.linkedin.com/in/zijian-zhou/">
+                         <span class="fa fa-linkedin"></span><br class="hidden-xs"> About me</a>
+                     </li>
+                     <li>
+                       <a href="#">
+                         <span class="fa fa-instagram"></span><br class="hidden-xs"> Gallery</a>
+                     </li>
+                   </ul><!-- #nav-list -->
+                 </div><!-- .collapse .navbar-collapse -->
+            </div> 
+        </nav>
+    </header>
+  <!-- jQuery (Bootstrap JS plugins depend on it) -->
+  <script src="js/jquery-2.1.4.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
