--- a/Job/my_resume.html
+++ b/Job/my_resume.html
@@ -48,7 +48,7 @@
                          <span class="fa fa-linkedin"></span><br class="hidden-xs"> About me</a>
                      </li>
                      <li>
-                       <a href="#">
+                       <a href="https://www.instagram.com/zhouuualexander/?hl=en">
                          <span class="fa fa-instagram"></span><br class="hidden-xs"> Gallery</a>
                      </li>
                    </ul><!-- #nav-list -->
