--- a/Job/my_resume.html
+++ b/Job/my_resume.html
@@ -57,6 +57,10 @@
             </div> 
         </nav>
     </header>
+    <div>
+        <img src="images/cali_768.JPG" alt="Picture of cali" class="img-responsive visible-xs">
+      
+      </div>
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-2.1.4.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
