--- a/Job/my_resume.html
+++ b/Job/my_resume.html
@@ -57,9 +57,26 @@
             </div> 
         </nav>
     </header>
-    <div>
-        <img src="images/cali_768.JPG" alt="Picture of cali" class="img-responsive visible-xs">
-      
+    <div id="main-content" class="container">
+        <div class="jumbotron">
+          <img src="images/cali_768.JPG" alt="Picture of cali" class="img-responsive visible-xs">
+        </div>
+    
+        <div id="home-tiles" class="row">
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <a href="https://www.ualberta.ca/"><div id="menu-tile"><span>UAlberta</span></div></a>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <a href="https://www.ualberta.ca/computing-science"><div id="specials-tile"><span>Cmputing science</span></div></a>
+          </div>
+          <div class="col-md-4 col-sm-12 col-xs-12">
+            <a href="https://goo.gl/maps/1cmNzDiZ3CA31wdT7" target="_blank">
+              <div id="map-tile">
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d151655.23689646172!2d-113.5459615!3d53.5646742!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x53a021f5618f10a3%3A0xcb5b65f29857b213!2sUniversity+of+Alberta!5e0!3m2!1sen!2s!4v1558748459399!5m2!1sen!2s" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>                <span>map</span>
+              </div>
+            </a>
+          </div>
+        </div>
       </div>
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-2.1.4.min.js"></script>
