--- a/Job/my_resume.html
+++ b/Job/my_resume.html
@@ -78,6 +78,36 @@
           </div>
         </div>
       </div>
+      <footer class="panel-footer">
+        <div class="container">
+          <div class="row">
+            <section id="hours" class="col-sm-4">
+              <span>Hours:</span><br>
+              Sun-Fri: 8:00am - 22:00pm<br>
+              Saturday: 9:00am - 22:00pm<br>
+              
+              <hr class="visible-xs">
+            </section>
+            <section id="address" class="col-sm-4">
+              <span>Address:</span><br>
+              116 St & 85 Ave<br>
+              Edmonton, AB T6G 2R3<br>
+              Canada
+              <hr class="visible-xs">
+            </section>
+            <section id="testimonials" class="col-sm-4">
+              <p>"Be curious about the world and grateful for life."</p>
+              <p>"Sometimes it's the people who no one imagines anything of who do the things that no one can imagine."</p>
+            </section>
+          </div>
+          <div class="text-center">&copy; Copyright Zijian Zhou 2019<br>
+            <a href="https://www.linkedin.com/in/ethanz97/">
+              The WELCOME Photo credits to My elder male cousin Ethan Zhou
+            </a>
+          </div>
+        </div>
+      </footer>
+    
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-2.1.4.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
