--- a/Job/my_resume.html
+++ b/Job/my_resume.html
@@ -59,7 +59,7 @@
     </header>
     <div id="main-content" class="container">
         <div class="jumbotron">
-          <img src="images/cali_768.png" alt="Picture of cali" class="img-responsive visible-xs">
+          <img src="images/cali_768.JPG" alt="Picture of cali" class="img-responsive visible-xs">
         </div>
     
         <div id="home-tiles" class="row">
