--- a/Job/my_resume.html
+++ b/Job/my_resume.html
@@ -102,7 +102,7 @@
           </div>
           <div class="text-center">&copy; Copyright Zijian Zhou 2019<br>
             <a href="https://www.linkedin.com/in/ethanz97/">
-              The WELCOME Photo credits to My elder male cousin Ethan Zhou
+              The BEACH photo credits to My elder male cousin Ethan Zhou
             </a>
           </div>
         </div>
