--- a/Job/my_resume.html
+++ b/Job/my_resume.html
@@ -59,7 +59,7 @@
     </header>
     <div id="main-content" class="container">
         <div class="jumbotron">
-          <img src="images/cali_768.JPG" alt="Picture of cali" class="img-responsive visible-xs">
+          <img src="images/person_768.jpg" alt="Picture of cali" class="img-responsive visible-xs">
         </div>
     
         <div id="home-tiles" class="row">
@@ -100,10 +100,7 @@
               <p>"Sometimes it's the people who no one imagines anything of who do the things that no one can imagine."</p>
             </section>
           </div>
-          <div class="text-center">&copy; Copyright Zijian Zhou 2019<br>
-            <a href="https://www.linkedin.com/in/ethanz97/">
-              The BEACH photo credits to My elder male cousin Ethan Zhou
-            </a>
+          <div class="text-center">&copy; Copyright Zijian Zhou 2019
           </div>
         </div>
       </footer>
