--- a/Job/my_resume.html
+++ b/Job/my_resume.html
@@ -41,7 +41,7 @@
                   
                     <ul id="nav-list" class="nav navbar-nav navbar-right">
                      <li>
-                       <a href="https://github.com/zhouuualexander/Zijian-Zhou-personal-website">
+                       <a href="https://zhouuualexander.github.io/">
                          <span class="fa fa-github"></span><br class="hidden-xs">  Projects</a>
                      </li>
                      <li>
